--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
-          <a href="./index.html" class="logo logo-web">
-            Web<span class="logo-studio">Studio</span>
+          <a href="./index.html" class="logo logo-web"
+            >Web<span class="logo-studio">Studio</span>
           </a>
           <ul class="nav-menu">
-            <li
-              ><a class="menu-list-link active" href="./index.html"
+            <li>
+              <a class="menu-list-link active" href="./index.html"
                 >Studio</a
               ></li
             >
@@ -50,7 +50,7 @@
       </div>
     </header>
     <main>
-      <section class="hero-section section">
+      <section class="hero-section section hide">
         <div class="container">
           <h1 class="master-href"> Effective Solutions for Your Business </h1>
           <button
@@ -61,7 +61,7 @@
           >
         </div>
       </section>
-      <section class="section">
+      <section class="section hide">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
@@ -120,7 +120,7 @@
           </ul>
         </div>
       </section>
-      <section id="studio" class="team-section section">
+      <section id="studio" class="team-section section hide">
         <div class="container">
           <h2 class="team-section-href">Our Team</h2>
           <ul class="team-list">
@@ -391,7 +391,7 @@
           </ul>
         </div>
       </section>
-      <section id="section" class="section">
+      <section id="section" class="section hide">
         <div class="container">
           <h2 class="portfolio-href">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -514,7 +514,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer-section">
+    <footer class="footer-section hide">
       <div class="container footer-container">
         <div class="footer-logo-container">
           <a class="logo logo-web footer-logo-link" href="./index.html">
@@ -604,7 +604,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal-window">
         <button type="button" class="close-modal-button" id="close-button">
           <svg class="close-icon" width="8" height="8">
@@ -691,6 +691,89 @@
         </form>
       </div>
     </div>
+    <div class="menu-mobile is-open">
+      <button type="button" class="close-menu-button" id="close-menu-button">
+        <svg class="close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu-list">
+        <li>
+          <a class="mobile-menu-list-link active" href="./index.html"
+            >Studio</a
+          ></li
+        >
+        <li><a class="mobile-menu-list-link" href="">Portfolio</a></li>
+        <li><a class="mobile-menu-list-link" href="">Contacts</a></li>
+      </ul>
+      <ul class="mobile-address-list">
+        <li>
+          <a class="mobile-address-list-item" href="tel:+110001111111">
+            +11 (000) 111-11-11
+          </a>
+        </li>
+        <li>
+          <a class="mobile-address-list-item" href="mailto:info@devstudio.com">
+            info@devstudio.com
+          </a>
+        </li>
+      </ul>
+      <ul class="mobile-social-list-container mobile-social-list-menu">
+        <li class="mobile-social-list-item">
+          <a
+            class="mobile-social-link"
+            href="https://instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to Instagram"
+          >
+            <svg class="mobile-icon-container-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-list-item">
+          <a
+            class="mobile-social-link"
+            href="https://twitter.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to Twitter"
+          >
+            <svg class="mobile-icon-container-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-list-item">
+          <a
+            class="mobile-social-link"
+            href="https://facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to Facebook"
+          >
+            <svg class="mobile-icon-container-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-item">
+          <a
+            class="mobile-social-link"
+            href="https://linkedin.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to Linkedin"
+          >
+            <svg class="mobile-icon-container-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
