--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header hide">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo logo-web"
@@ -55,7 +55,7 @@
       </div>
     </header>
     <main>
-      <section class="hero-section section hide">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="master-href"> Effective Solutions for Your Business </h1>
           <button
@@ -66,7 +66,7 @@
           >
         </div>
       </section>
-      <section class="section hide">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
@@ -125,7 +125,7 @@
           </ul>
         </div>
       </section>
-      <section id="studio" class="team-section section hide">
+      <section id="studio" class="team-section section">
         <div class="container">
           <h2 class="team-section-href">Our Team</h2>
           <ul class="team-list">
@@ -673,7 +673,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer-section hide">
+    <footer class="footer-section">
       <div class="container footer-container">
         <div class="footer-logo-container">
           <a class="logo logo-web footer-logo-link" href="./index.html">
