--- a/index.html
+++ b/index.html
@@ -840,8 +840,11 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="privacy-policy-link">Privacy Policy</a>
+
+              <span>
+                I accept the terms and conditions of the
+                <a href="" class="privacy-policy-link">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button type="submit" class="order-button send-button-geometry"
