--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
       </ul>
       <ul class="mobile-address-list">
         <li>
-          <a class="mobile-address-list-item" href="tel:+110001111111">
+          <a class="mobile-address-list-item active" href="tel:+110001111111">
             +11 (000) 111-11-11
           </a>
         </li>
