fix error - add aria-label for buttons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </li>
           </ul>
         </address>
-        <button class="burger-menu-button">
+        <button class="burger-menu-button" aria-label="Open mobile menu">
           <svg class="burger-menu-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
@@ -765,7 +765,12 @@
     </footer>
     <div class="backdrop">
       <div class="modal-window">
-        <button type="button" class="close-modal-button" id="close-button">
+        <button
+          type="button"
+          class="close-modal-button"
+          id="close-button"
+          aria-label="Close menu button"
+        >
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -854,7 +859,12 @@
       </div>
     </div>
     <div class="menu-mobile">
-      <button type="button" class="close-menu-button" id="close-menu-button">
+      <button
+        type="button"
+        class="close-menu-button"
+        id="close-menu-button"
+        aria-label="Close menu button"
+      >
         <svg class="close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
